# s21_snake

./: .gitignore  Makefile  README.md  README_RUS.md  README_UZB.md  TODO.md
src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  main  main_cli.c  main_snake  main_snake.cc  main_tetris.c  snake  t  tetris.txt  tsc_src.txt
src/brick_game/: CMakeLists.txt  azamat_tetris  brick_game.c  brick_game.h  sarah_tetris  tetris.c  tetris_engine.c  tetris_engine.h
src/brick_game/snake/: Apple.cpp  Snake.cpp  Snake.h  main.cpp  main_snake  output.txt
src/brick_game/snake/controller/: controller.cpp  controller.h
src/brick_game/snake/model/: Snake.cpp  Snake.h
src/brick_game/tetris/game_api/: game_api.c  game_api.h
src/brick_game/tetris/inc/: TGM3Randomizer.h  Timer.h  tetramino_movement.h  tetris.h  timer.h
src/brick_game/tetris/src/: TGM3Randomizer.c  Timer.c  field_mechanics.c  game_api.c  game_rules.c  game_state_management.c  storage.c  tetramino.c  tetramino_movement.c  timer.c
src/brick_game/tetris/tetris_engine/inc/: TGM3Randomizer.h  tetris.h
src/brick_game/tetris/tetris_engine/src/: TGM3Randomizer.c  field_mechanics.c  game_state_management.c  storage.c  tetramino.c  tetramino_movement.c  utilities.c
src/brick_game/utils/: defines.h  timer.c  timer.h  utilities.c  utilities.h
src/desk/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  untitled
src/game_api/: game_api.c  game_api.h
src/gui/cli/: CMakeLists.txt  cli.c  cli.h  main_cli.c  menu.c
src/gui/cli/render/: render.h  render_tetris.c
src/gui/cli/snake/: SnakeView.cpp  SnakeView.h  main.cpp
src/gui/cli/tetris/: frontend.c  frontend.h  main_tetris.c
src/gui/desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  snake_widget.cpp  tetris_widget.cpp  tetris_widget.h  tetriswidget.cpp  tetriswidget.h  widget.cpp  widget.h
src/gui/untitled/: gui.txt  main.cpp  mainwindow.cpp  mainwindow.h  output.txt  snake_widget.h  tetris_widget.h  tetriswidget.cpp  untitled.pro
src/tests/: test_snake_controller.cpp
